--- a/config/_default/menus.zh-tw.toml
+++ b/config/_default/menus.zh-tw.toml
@@ -16,6 +16,11 @@
   weight = 10
 
 [[main]]
+  name = "演算法與解題"
+  pageRef = "algo"
+  weight = 20
+
+[[main]]
   identifier = "github"
   pre = "github"
   url = "https://github.com/YuanData"
