--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,11 +10,11 @@ defaultContentLanguage = "zh-tw"
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-paginate = 10
+paginate = 5
 summaryLength = 0
 
 buildDrafts = false
-buildFuture = false
+buildFuture = true
 
 # googleAnalytics = "G-XXXXXXXXX"
 
