--- a/config/_default/menus.zh-tw.toml
+++ b/config/_default/menus.zh-tw.toml
@@ -21,8 +21,8 @@
   weight = 20
 
 [[main]]
-  name = "後端實務"
-  pageRef = "backend"
+  name = "軟體開發實務"
+  pageRef = "softdev"
   weight = 30
 
 [[main]]
